--- a/8_CommonOperation/去空格.md
+++ b/8_CommonOperation/去空格.md
@@ -14,12 +14,13 @@
     ```
     ''.join(a.split())
     ```
-    # 正则法
+    - 正则法
     ```
     re.sub(' ', '', a)
     re.compile(' ').sub('', a)
     ```
-    
+---
+
 - 元组/列表去空格
 ```
 filter(lambda x: x!=' ', ['a', ' ', 'b'])
