--- a/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
+++ b/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
@@ -1,1 +1,36 @@
+<h1 align = "center">:rocket: 聚合函数 :facepunch:</h1>
 
+---
+
+- gr.diff: 差分
+- gr.shift
+
+- gr.nlargest: topN
+- gr.nsmallest: tailN
+
+- gr.cumcount
+- gr.cummax
+- gr.cummin
+- gr.cumprod
+- gr.cumsum
+- gr.expanding
+- gr.get_group
+- gr.groups
+- gr.hist
+- gr.idxmax
+- gr.idxmin
+- gr.indices
+- gr.irow
+- gr.mad
+
+- gr.nth
+- gr.ohlc
+- gr.pad
+- gr.pct_change
+- gr.prod
+- gr.resample
+- gr.rolling
+- gr.sem
+- gr.size
+- gr.transform
+- gr.tshift
