--- a/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
+++ b/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
@@ -34,3 +34,26 @@
 - gr.size
 - gr.transform
 - gr.tshift
+
+---
+```
+- gr.transform: over(partition by User_id)
+
+|	|a	|b	|c
+---|---|---|---
+0|	A|	0.0|	1
+1|	A|	1.0|	2
+2|	A|	3.0|	3
+3|	A|	5.0|	4
+4|	B|	0.0|	11
+5|	B|	1.0|	12
+6|	B|	2.0|	13
+
+```
+df.groupby('a').transform(lambda x: x.count())
+```
+```python
+# 计数特征
+df2.assign(count_EID = lambda x: x.groupby('EID')['EID'].transform(lambda x: x.count()))
+```
+---
