--- a/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
+++ b/2_CommonlyUsedModules/1_pandas/1_聚合函数.md
@@ -56,3 +56,23 @@ df.groupby('a').transform(lambda x: x.count())
 df2.assign(count_EID = lambda x: x.groupby('EID')['EID'].transform(lambda x: x.count()))
 ```
 ---
+```
+a	b
+0	1	1
+1	1	1
+2	1	2
+3	1	2
+4	1	3
+5	2	1
+6	2	1
+7	2	2
+```
+- p.groupby(['a', 'b'], as_index=False)['a'].agg({'xxx': 'count'})
+```
+	a	b	xxx
+0	1	1	2
+1	1	2	2
+2	1	3	1
+3	2	1	2
+4	2	2	1
+```
