--- a/8_CommonOperation/命令行参数.md
+++ b/8_CommonOperation/命令行参数.md
@@ -9,3 +9,28 @@ args = parser.parse_args()
 print(args.gpus)
 print(args.batch_size)
 ```
+
+```python
+# -*- coding: utf-8 -*-
+import os
+import sys
+import argparse
+
+parser = argparse.ArgumentParser(description='This is pyspark task!!!')
+parser.add_argument('-d', '--dependence')
+parser.add_argument('-m', '--main')
+args = parser.parse_args()
+
+cmd = \
+"source change_spark_version spark-2.1.0 && /home/bigdata/software/spark-2.1.0.7-bin-2.4.0.10/bin/spark-submit \
+--master yarn-cluster \
+--num-executors 100 \
+--executor-memory 20G \
+--executor-cores 2 \
+--driver-memory 3G \
+--py-files %s %s" % (args.dependence, args.main)
+
+print(cmd)
+
+#os.system(cmd)
+```
