--- a/8_CommonOperation/命令行参数.md
+++ b/8_CommonOperation/命令行参数.md
@@ -1,13 +1,7 @@
-
-
 ```python
-import argparse
-parser = argparse.ArgumentParser(description='manual to this script')
-parser.add_argument('--gpus', type=str, default = None)
-parser.add_argument('--batch-size', type=int, default=32)
-args = parser.parse_args()
-print(args.gpus)
-print(args.batch_size)
+# -*- coding: utf-8 -*-
+import sys
+print(sys.argv[1:]) # 解析需要的参数即可
 ```
 
 http://blog.csdn.net/guoyajie1990/article/details/76739977
