--- a/8_CommonOperation/读取大文件.md
+++ b/8_CommonOperation/读取大文件.md
@@ -1,4 +1,11 @@
 ```python
+def iterWrite(file):
+    with open(file) as myfile:
+        for line in myfile:
+            yield line
+```
+
+```python
 with open('somefile.txt', 'r') as myfile:
     for line in myfile:
         # operation
