--- a/8_CommonOperation/读取大文件.md
+++ b/8_CommonOperation/读取大文件.md
@@ -1,15 +1,10 @@
 ```python
-def iterWrite(file):
+from tqdm import tqdm
+
+def iterRead(file='/opt/yuanjie_data/wiki.txt'):
     with open(file) as myfile:
-        for line in myfile:
+        for line in tqdm(myfile, desc='iterRead'):
             yield line
-```
-
-```python
-with open('somefile.txt', 'r') as myfile:
-    for line in myfile:
-        # operation
-
 ```
 
 ```python
